--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,5 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
+# GitHub Hosted will provision new machines for code deployments
+
 name: Deploy Hugo site to Pages
 
 on:
@@ -24,29 +25,46 @@ concurrency:
 defaults:
   run:
     shell: bash
+    
+env:
+  HUGO_VERSION: 0.118.2
+  url: https://education.launchcode.org/intro-to-web-dev-curriculum/
 
 jobs:
+  check-grammar:
+    permissions: write-all 
+    runs-on: ubuntu-latest
+    name: Proofread PRs
+    steps:
+      - name: Proofread
+        uses: awreck/proofread-action@v1
+        id: proofread
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
   # Build job
   build:
     runs-on: ubuntu-latest
-    env:
-      HUGO_VERSION: 0.108.0
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Install Dart Sass Embedded
-        run: sudo snap install dart-sass-embedded
+      # - name: Install Dart Sass Embedded
+      #   run: sudo snap install dart-sass-embedded
+        
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
+      
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
+
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
@@ -55,9 +73,10 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "https://education.launchcode.org/java-web-dev-curriculum/"
+            --baseURL `${{ env.url }}`
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
 
@@ -65,10 +84,10 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: https://education.launchcode.org/java-web-dev-curriculum/
+      url: ${{ env.url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2
