--- a/.github/workflows/GitHub-Hugo_Pipeline.yml
+++ b/.github/workflows/GitHub-Hugo_Pipeline.yml
@@ -3,8 +3,8 @@ name: GitHub-Hugo_Pipeline
 
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
+  # push:
+  #   branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -75,7 +75,7 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-            
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
