--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -28,7 +28,6 @@ defaults:
     
 env:
   HUGO_VERSION: 0.118.2
-  url: ${{ steps.pages.outputs.base_url }}
 
 jobs:
   check-grammar:
@@ -41,7 +40,7 @@ jobs:
         id: proofread
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          
+
   # Build job
   build:
     runs-on: ubuntu-latest
@@ -73,7 +72,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL `${{ env.url }}`
+            --baseURL ${{ steps.pages.outputs.base_url }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
@@ -84,7 +83,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ env.url }}
+      url: ${{ steps.pages.outputs.base_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
