--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,16 +30,16 @@ env:
   HUGO_VERSION: 0.118.2
 
 jobs:
-  check-grammar:
-    permissions: write-all 
-    runs-on: ubuntu-latest
-    name: Proofread PRs
-    steps:
-      - name: Proofread
-        uses: awreck/proofread-action@v1
-        id: proofread
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+  # check-grammar:
+  #   permissions: write-all 
+  #   runs-on: ubuntu-latest
+  #   name: Proofread PRs
+  #   steps:
+  #     - name: Proofread
+  #       uses: awreck/proofread-action@v1
+  #       id: proofread
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
 
   # Build job
   build:
@@ -49,8 +49,8 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      # - name: Install Dart Sass Embedded
-      #   run: sudo snap install dart-sass-embedded
+      - name: Install Dart Sass
+        run: sudo snap install dart-sass
         
       - name: Checkout
         uses: actions/checkout@v4
