--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -44,6 +44,8 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    outputs:
+      siteUrl: ${{steps.deploy.outputs.url}}
     steps:
       - name: Install Hugo CLI
         run: |
@@ -72,7 +74,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL ${{ steps.pages.outputs.base_url }}
+            --baseURL ${{ steps.pages.outputs.base_url }} >> GITHUB_TOKEN
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
@@ -83,7 +85,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.pages.outputs.base_url }}
+      url: ${{ needs.build.outputs.siteUrl }}
     runs-on: ubuntu-latest
     needs: build
     steps:
