--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -45,7 +45,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      siteUrl: ${{steps.deploy.outputs.url}}
+      siteUrl: ${{steps.pages.outputs.url}}
     steps:
       - name: Install Hugo CLI
         run: |
@@ -74,7 +74,8 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL ${{ steps.pages.outputs.base_url }} >> GITHUB_TOKEN
+            --baseURL ${{ steps.pages.outputs.base_url }} \
+            echo "siteurl=${{ steps.pages.outputs.base_url }}" >> >> $GITHUB_OUTPUT
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
