--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -75,7 +75,7 @@ jobs:
           hugo \
             --minify \
             --baseURL ${{ steps.pages.outputs.base_url }} \
-            echo "siteurl=${{ steps.pages.outputs.base_url }}" >> >> $GITHUB_OUTPUT
+            echo "siteurl=${{ steps.pages.outputs.base_url }}" >> $GITHUB_OUTPUT
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
