--- a/.github/workflows/GitHub-Hugo_Pipeline.yml
+++ b/.github/workflows/GitHub-Hugo_Pipeline.yml
@@ -63,6 +63,10 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
 
+      - name: Get URL 
+        id: siteURL
+        run: echo "::set-output name=baseURL::$(echo $PAGES_URL)"
+
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
 
@@ -83,11 +87,11 @@ jobs:
 
   # Deployment job
   deploy:
+    needs: build
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ needs.build.outputs.baseURL }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
