--- a/.github/workflows/GitHub-Hugo_Pipeline.yml
+++ b/.github/workflows/GitHub-Hugo_Pipeline.yml
@@ -67,9 +67,10 @@ jobs:
         id: siteURL
         run: |
           echo "baseURL=$PAGES_URL" >> "$GITHUB_ENV"
-          echo "baseURL2=${{ steps.pages.outputs.baseURL }}" >> "$GITHUB_ENV"
-          echo "$GITHUB_ENV"
-
+          echo "baseURL2=${{ steps.pages.outputs }}" >> "$GITHUB_ENV"
+          echo "************************************"
+          echo "base1 = $baseURL, base2 = baseURL2"
+          
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
 
