updated and removed submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+# [submodule "themes/hugo-theme-relearn"]
+# 	path = themes/hugo-theme-relearn
+# 	url = https://github.com/LaunchCode-Hugo-Submodules/hugo-theme-relearn
+
 [submodule "themes/hugo-theme-relearn"]
 	path = themes/hugo-theme-relearn
 	url = https://github.com/LaunchCode-Hugo-Submodules/hugo-theme-relearn
