--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -36,15 +36,18 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    outputs:
-      siteUrl: ${{steps.pages.outputs.url}}
+    # outputs:
+    #   siteUrl: ${{steps.pages.outputs.url}}
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
       - name: Install Dart Sass
-        run: sudo snap install dart-sass
+        run: | 
+          echo "**********Working Directory =>" pwd 
+          sudo snap install dart-sass
         
       - name: Checkout
         uses: actions/checkout@v4
@@ -66,8 +69,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL ${{ steps.pages.outputs.base_url }} \
-            echo "siteurl=${{ steps.pages.outputs.base_url }}" >> $GITHUB_OUTPUT
+            --baseURL ${{ steps.pages.outputs.base_url }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
