--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -51,8 +51,8 @@ jobs:
         
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          submodules: recursive
+        # with:
+        #   submodules: recursive
       
       - name: Setup Pages
         id: pages
