--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,11 +1,10 @@
-# GitHub Hosted will provision new machines for code deployments
-
+# Sample workflow for building and deploying a Hugo site to GitHub Pages
 name: Deploy Hugo site to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  # push:
-  #   branches: ["main"]
+  push:
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,42 +24,29 @@ concurrency:
 defaults:
   run:
     shell: bash
-    working-directory: /home/runner/work/
-
-    
-env:
-  HUGO_VERSION: 0.118.2
 
 jobs:
-
   # Build job
   build:
     runs-on: ubuntu-latest
-    # outputs:
-    #   siteUrl: ${{steps.pages.outputs.url}}
+    env:
+      HUGO_VERSION: 0.108.0
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-
-      - name: Install Dart Sass
-        run: | 
-          echo "**********Working Directory =>" pwd 
-          sudo snap install dart-sass
-        
+      - name: Install Dart Sass Embedded
+        run: sudo snap install dart-sass-embedded
       - name: Checkout
-        uses: actions/checkout@v4
-        # with:
-        #   submodules: recursive
-      
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
-
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
@@ -69,10 +55,9 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL ${{ steps.pages.outputs.base_url }}
-
+            --baseURL "https://education.launchcode.org/java-web-dev-curriculum/"
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v1
         with:
           path: ./public
 
@@ -80,10 +65,10 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ needs.build.outputs.siteUrl }}
+      url: https://education.launchcode.org/java-web-dev-curriculum/
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v1
